[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

# Git dependency with a specific branch (for camel-ai)
camel-ai = { git = "https://github.com/camel-ai/camel.git", branch = "feature/workforce-stable", extras = ["all"] }
openai = "^1.45.0"
pydantic = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

